edit gitignore again :)

--- a/opentee/.gitignore
+++ b/opentee/.gitignore
@@ -50,16 +50,9 @@ Makefile
 
 
 # VSCode
-.vscode/*
-#!.vscode/settings.json
-#!.vscode/tasks.json
-#!.vscode/launch.json
-#!.vscode/extensions.json
-#!.vscode/*.code-snippets
-
+.vscode/
 # Local History for Visual Studio Code
 .history/
-
 # Built Visual Studio Code Extensions
 *.vsix
 
