--- a/AFLplusplus/.gitignore
+++ b/AFLplusplus/.gitignore
@@ -98,3 +98,11 @@ utils/persistent_mode/test-instr
 !coresight_mode
 !coresight_mode/coresight-trace
 vuln_prog
+
+
+# VSCode
+.vscode/
+# Local History for Visual Studio Code
+.history/
+# Built Visual Studio Code Extensions
+*.vsix
