edit gitignore again :D

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # VSCode
-/**/.vscode/
+.vscode/
 # Local History for Visual Studio Code
-/**/.history/
+.history/
 # Built Visual Studio Code Extensions
-/**/*.vsix
+*.vsix
