Disable ASAN for launcher, updated instructions to preload ASAN

--- a/opentee/emulator/launcher/Makemodule.am
+++ b/opentee/emulator/launcher/Makemodule.am
@@ -1,6 +1,6 @@
 # libLauncherApi shared library
 
-export AFL_USE_ASAN=1
+#export AFL_USE_ASAN=1
 CC = afl-gcc-fast
 
 lib_LTLIBRARIES += libLauncherApi.la
